Fix spacing

--- a/src/static/css/modules/image-one-up.css
+++ b/src/static/css/modules/image-one-up.css
@@ -35,4 +35,8 @@
   .image-one-up-module__content {
     grid-column: span 12;
   }
+
+  .image-one-up-module__caption {
+    margin-bottom: -10px;
+  }
 }
