--- a/src/static/css/modules/image-three-up.css
+++ b/src/static/css/modules/image-three-up.css
@@ -49,4 +49,8 @@
   .image-three-up-module__content {
     grid-column: span 12;
   }
+
+  .image-one-up-module__caption {
+    margin-bottom: -10px;
+  }
 }
