--- a/src/static/css/modules/image-two-up.css
+++ b/src/static/css/modules/image-two-up.css
@@ -41,4 +41,8 @@
   .image-two-up-module__content {
     grid-column: span 12;
   }
+
+  .image-one-up-module__caption {
+    margin-bottom: -10px;
+  }
 }
