--- a/src/static/css/modules/paragraph.css
+++ b/src/static/css/modules/paragraph.css
@@ -1,5 +1,6 @@
 .paragraph-module.module {
   width: 100%;
+  margin-bottom: 48px;
 }
 
 .paragraph-module__content {
@@ -38,6 +39,10 @@
 }
 
 @media (max-width: 768px) {
+  .paragraph-module.module {
+    margin-bottom: 32px;
+  }
+
   .paragraph-module__content {
     grid-column: span 12;
   }
